test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-unmanaged-from-nonnil-borrowed.good
init-field-dflt-nonnil-unmanaged-from-nonnil-borrowed.chpl:8: error: Cannot initialize 'lhs' of type unmanaged MyClass from a 'borrowed MyClass'
